redirect to correct file

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
   	<h1>Welcome to our Bachelor's Project!</h1>
-  	<p>Try out the pointing task here: <a href="pointing.php">link</a></p>
+  	<p>Try out the pointing task here: <a href="pointing.html">link</a></p>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
