--- a/pointing.html
+++ b/pointing.html
@@ -15,9 +15,25 @@
     <![endif]-->
   </head>
   <body>
+	<div class="row">
+		<canvas id="canvas"></canvas>
+	</div>
+	<div class="row">
+		<div class="col-md-4 col-md-offset-4">
+			<table id="table" class="table table-striped">
+				<thead>
+					<tr>
+						<td>#</td>
+						<td>Time</td>
+					</tr>
+				</thead>
+				<tbody>
+					
+				</tbody>
+			</table>
+		</div>
+	</div>
     
-    <canvas id="canvas"></canvas>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="js/paper.min.js"></script>
