--- a/pointing.html
+++ b/pointing.html
@@ -16,14 +16,14 @@
   </head>
   <body>
 	<div class="row">
-		<canvas id="canvas"></canvas>
-	</div>
-	<div class="row">
-		<div class="col-md-4 col-md-offset-4">
+		<div class="col-md-6"><canvas id="canvas"></canvas></div>
+		<div class="col-md-6">
 			<table id="table" class="table table-striped">
 				<thead>
 					<tr>
 						<td>#</td>
+						<td>A</td>
+						<td>W</td>
 						<td>Time</td>
 					</tr>
 				</thead>
@@ -33,7 +33,6 @@
 			</table>
 		</div>
 	</div>
-    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="js/paper.min.js"></script>
