--- a/pointing.html
+++ b/pointing.html
@@ -18,6 +18,9 @@
 	<div class="row">
 		<div class="col-md-12"><canvas id="canvas"></canvas></div>
 	</div>
+	<div class="row">
+		<button onclick="onContinue()" style="display: none" class="btn btn-primary btn-lg">Continue</button>
+	</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="js/paper.min.js"></script>
