--- a/pointing.html
+++ b/pointing.html
@@ -16,7 +16,7 @@
   </head>
   <body>
 	<div class="row">
-		<div class="col-md-12"><canvas id="canvas"></canvas></div>
+		<canvas id="canvas"></canvas>
 	</div>
 	<div class="row">
 		<button id="continue" onclick="onContinue()" style="display: none" class="btn btn-primary btn-lg">Continue</button>
