--- a/index.html
+++ b/index.html
@@ -16,13 +16,63 @@
   </head>
   <body>
 	<div class="row">
-		<h1>Welcome to our Bachelor's Project!</h1>
+		<h1>Velkommen til vores bachelorprojekt!</h1>
 	</div>
 	<div class="row">
 		<form id="form" class="col-md-4 col-md-offset-4">
 			<div class="form-group">
-				<label for="name">Name</label>
-				<input type="text" class="form-control" name="name" placeholder="Anders And">
+				<label for="reference">Hvorfra hørte du om denne side?</label>
+				<input type="text" class="form-control" name="reference">
+			</div>
+			<div class="form-group">
+				<label for="age">Hvor gammel er du?</label>
+				<input type="number" class="form-control" name="age">
+			</div>
+			<div class="form-group">
+				<label for="">Hvad er dit køn?</label><br/>
+				<label class="radio-inline">
+					<input type="radio" name="gender" value="male"> Mand
+				</label>
+				<label class="radio-inline">
+					<input type="radio" name="gender" value="female"> Kvinde
+				</label>
+			</div>
+			<div class="form-group">
+				<label for="videogames">Hvor mange timer om ugen bruger du på computerspil?</label>
+				<select name="videogames" class="form-control">
+					<option>under 1 time</option>
+					<option>1 - 5 timer</option>
+					<option>5 - 15 timer</option>
+					<option>15 - 40 timer</option>
+					<option>over 40 timer</option>
+				</select>
+			</div>
+			<div class="form-group">
+				<label for="computers">Hvor mange timer om ugen bruger du på computere?</label>
+				<select name="computers" class="form-control">
+					<option>under 1 time</option>
+					<option>1 - 5 timer</option>
+					<option>5 - 15 timer</option>
+					<option>15 - 40 timer</option>
+					<option>over 40 timer</option>
+				</select>
+			</div>
+			<div class="form-group">
+				<label for="hand">Er du højre- eller venstrehåndet?</label><br/>
+				<label class="radio-inline">
+					<input type="radio" name="hand" value="left"> Venstrehåndet
+				</label>
+				<label class="radio-inline">
+					<input type="radio" name="hand" value="right"> Højrehåndet
+				</label>
+			</div>
+			<div class="form-group">
+				<label for="device">Hvilken pegeenhed benytter du?</label>
+				<select name="device" class="form-control">
+					<option>mus</option>
+					<option>touchpad</option>
+					<option>andet</option>
+				</select>
 			</div>
 		</form>
 	</div>
