--- a/navigating.html
+++ b/navigating.html
@@ -19,6 +19,7 @@
 		<canvas id="canvas"></canvas>
 	</div>
 	<div class="row">
+		<button id="nextTunnel" onclick="next()" style="display: none" class="btn btn-primary btn-lg">Continue</button>
 		<button id="continue" onclick="onContinue()" style="display: none" class="btn btn-primary btn-lg">Continue</button>
 	</div>
 
