--- a/pointing.html
+++ b/pointing.html
@@ -16,10 +16,12 @@
   </head>
   <body>
 	<div class="row">
-		<canvas id="canvas"></canvas>
+		<div id="frame">
+			<canvas id="canvas"></canvas>
+		</div>
 	</div>
 	<div class="row">
-		<button id="continue" onclick="onContinue()" style="display: none" class="btn btn-primary btn-lg">Continue</button>
+		<button id="continue" onclick="onContinue()" style="display: none" class="btn btn-primary btn-lg">Fortsæt</button>
 	</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
