--- a/navigating.html
+++ b/navigating.html
@@ -16,13 +16,14 @@
   </head>
   <body>
 	<div class="row">
-		<canvas id="canvas"></canvas>
+		<div id="frame" style="width: 1024px;">
+			<canvas id="canvas"></canvas>
+			<button id="next" onclick="onNext()" style="display: none" class="btn btn-primary btn-lg">Næste</button>
+		</div>
 	</div>
 	<div class="row">
-		<button id="nextTunnel" onclick="next()" style="display: none" class="btn btn-primary btn-lg">Continue</button>
-		<button id="continue" onclick="onContinue()" style="display: none" class="btn btn-primary btn-lg">Continue</button>
+		<button id="continue" onclick="onContinue()" style="display: none" class="btn btn-primary btn-lg">Fortsæt</button>
 	</div>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="js/paper.min.js"></script>
