--- a/survey.html
+++ b/survey.html
@@ -35,6 +35,12 @@
 					<label class="radio-inline">
 						<input type="radio" name="gender" value="female"> Kvinde
 					</label>
+					<label class="radio-inline">
+						<input type="radio" name="gender" value="other"> Andet
+					</label>
+					<label class="radio-inline">
+						<input type="radio" name="gender" value="female"> Vil ikke oplyse
+					</label>
 				</div>
 				<div class="form-group">
 					<label for="videogames">Hvor mange timer om ugen bruger du på computerspil?</label>
