--- a/pointing.html
+++ b/pointing.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bachelor - Pointing Task</title>
+    <title>Bachelorprojekt</title>
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -18,10 +18,8 @@
 	<div class="row">
 		<div id="frame">
 			<canvas id="canvas"></canvas>
+			<button id="continue" onclick="onContinue()" style="display: none" class="btn btn-primary btn-lg btn-block">Fortsæt</button>
 		</div>
-	</div>
-	<div class="row">
-		<button id="continue" onclick="onContinue()" style="display: none" class="btn btn-primary btn-lg">Fortsæt</button>
 	</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
