--- a/survey.html
+++ b/survey.html
@@ -39,7 +39,7 @@
 						<input type="radio" name="gender" value="other"> Andet
 					</label>
 					<label class="radio-inline">
-						<input type="radio" name="gender" value="female"> Vil ikke oplyse
+						<input type="radio" name="gender" value="na"> Vil ikke oplyse
 					</label>
 				</div>
 				<div class="form-group">
@@ -69,6 +69,9 @@
 					</label>
 					<label class="radio-inline">
 						<input type="radio" name="hand" value="left"> Venstrehåndet
+					</label>
+					<label class="radio-inline">
+						<input type="radio" name="hand" value="other"> Andet
 					</label>
 				</div>
 				<div class="form-group">
