--- a/results.html
+++ b/results.html
@@ -17,7 +17,7 @@
   <body>
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3">
-			<p id="debug"></p>
+			<p id="debug">Vent venligst, indsender data..</p>
 		</div>
 	</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
