--- a/results.html
+++ b/results.html
@@ -29,9 +29,9 @@
 		else { var data = JSON.parse(sessionStorage.data) }
 		
 		$(function() {
-			$.post('submit.php', JSON.stringify(data), function(response) {
+			$.post('submit.php', JSON.stringify(data), null, 'json').done(function(response) {
 				$('#debug').html(response);
-			}, 'json');
+			});;
 		});
 		
     </script>
