--- a/results.html
+++ b/results.html
@@ -29,14 +29,9 @@
 		else { var data = JSON.parse(sessionStorage.data) }
 		
 		$(function() {
-			$.ajax({
-				type: 'POST',
-				url: 'submit.php',
-				data: data,
-				dataType: 'json'
-			}).done(function(response) {
+			$.post('submit.php', data, function(response) {
 				$('#debug').html(response);
-			});
+			}, 'json');
 		});
 		
     </script>
