index translated to danish

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3">
 			<h1>Bachelorprojekt</h1>
-			<p>We are studying Fitts' Law, a model of human motor response developed by Paul Fitts in 1954. Fitts' Law has been applied by Human Factors and Ergonomics engineers to thousands of designs ranging from assembly lines to computer interfaces. Since Fitts' model is so influential, it is important to verify its accuracy and to consider alternative models.</p>
-			<p>We've developed a web-based interactive experiment that allows anyone on the Internet to see if their own motor skills compare with Fitts' and with an alternative model we've developed based on an acceleration model.  If you can spare 3 minutes to click on 50 target points, we'll plot and display your results immediately.  In a few months, we'll post a copy of our report of how well these models perform, based on the timing data from hundreds of users like you.</p>
+			<p>Vi laver en undersøgelse af Fitts' lov, en model af det menneskelige motoriske system udviklet af Paul Fitts i 1954. Fitts' lov er blevet anvendt af ergonomiingeniører til tusindvis af designs af alt fra samlebånd til computergrænseflader. Eftersom Fitts' lov er så indflydelsesrig, så er det vigtigt at kontrollere dens nøjagtighed, og overveje alternative modeller.</p>
+			<p>Vi har udviklet et webbaseret interaktivt eksperiment, der muliggør at alle på internettet kan deltage i vores forsøg, og gøre deres forsøgsdata tilgængelig for os. Hvis du kan undvære 3 minutter til at klikke på 29 målpunkter, vil vi meget gerne have dig til at deltage i vores forsøg.</p>
 			<button class="btn btn-primary btn-lg btn-block" onclick="onContinue()">Fortsæt</button>
 		</div>
 	</div>
