--- a/navigating.html
+++ b/navigating.html
@@ -21,6 +21,9 @@
 			<button id="next" onclick="onNext()" style="display: none" class="btn btn-primary btn-lg">Næste</button>
 			<button id="continue" onclick="onContinue()" style="display: none" class="btn btn-primary btn-lg btn-block">Fortsæt</button>
 		</div>
+		<div class="col-md-6 col-md-offset-3">
+			TODO
+		</div>
 	</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
