--- a/navigating.html
+++ b/navigating.html
@@ -22,7 +22,7 @@
 			<button id="continue" onclick="onContinue()" style="display: none" class="btn btn-primary btn-lg btn-block">Fortsæt</button>
 		</div>
 		<div class="col-md-6 col-md-offset-3">
-			TODO
+			<p>TODO: Beskrivelse af eksprerimentet</p>
 		</div>
 	</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
