--- a/survey.html
+++ b/survey.html
@@ -85,7 +85,8 @@
 					</select>
 				</div>
 			</form>
-			<button class="btn btn-primary btn-lg btn-block" onclick="onContinue()">Continue</button>
+			<p>Når du trykker på næste vil testen gå igang. Der vil på næste side være informationstekst om hvad du skal gøre.</p>
+			<button class="btn btn-primary btn-lg btn-block" onclick="onContinue()">Næste</button>
 		</div>
 	</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
