--- a/navigating.html
+++ b/navigating.html
@@ -21,6 +21,8 @@
 			<button id="next" onclick="onNext()" style="display: none" class="btn btn-primary btn-lg">Næste</button>
 			<button id="continue" onclick="onContinue()" style="display: none" class="btn btn-primary btn-lg btn-block">Fortsæt</button>
 		</div>
+	</div>
+	<div class="row">
 		<div class="col-md-6 col-md-offset-3">
 			<p>TODO: Beskrivelse af eksprerimentet</p>
 		</div>
