--- a/pointing.html
+++ b/pointing.html
@@ -21,6 +21,11 @@
 			<button id="continue" onclick="onContinue()" style="display: none" class="btn btn-primary btn-lg btn-block">Fortsæt</button>
 		</div>
 	</div>
+	<div class="row">
+		<div class="col-md-6 col-md-offset-3">
+			<p>TODO: Beskrivelse af eksprerimentet</p>
+		</div>
+	</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="js/paper.min.js"></script>
