--- a/navigating.html
+++ b/navigating.html
@@ -19,12 +19,13 @@
 		<div id="frame" style="width: 1024px;">
 			<canvas id="canvas"></canvas>
 			<button id="next" onclick="onNext()" style="display: none" class="btn btn-primary btn-lg">Næste</button>
-			<button id="continue" onclick="onContinue()" style="display: none" class="btn btn-primary btn-lg btn-block">Fortsæt</button>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3">
-			<p>TODO: Beskrivelse af eksprerimentet</p>
+      <button id="continue" onclick="onContinue()" style="display: none" class="btn btn-primary btn-lg btn-block">Fortsæt</button>
+			
+      <p>I denne opgave skal du føre din markør gennem tunnellen. Du starter i venstre siden og slutter i højre side. Hvis musen kommer udenfor tunnellen kan du blot fortsætte. Det gælder ikke om at udføre opgaven hurtigt, men snarere præcist. I denne opgave registrere vi din markørs bane og tiden det tager at udføre opgave.</p>
 		</div>
 	</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
