--- a/results.html
+++ b/results.html
@@ -17,7 +17,9 @@
   <body>
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3">
-			<p id="debug">Vent venligst, indsender data.. (dette kan tage op til flere minutter)</p>
+      <h2 id="headline">Vent venligst</h2>
+			<p id="debug">indsender data.. (dette kan tage op til flere minutter)</p>
+      <p id="outtro" style="display:none;">Vi takker dig for din deltagelse i vores bachelorprojekt. Den opsamlede data vil blive brugt til at analysere om markørens bevægelsesbane og acceleration kan tilpasses kendte variationer af Fitt's Lov. </p>
 		</div>
 	</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -30,7 +32,9 @@
 		
 		$(function() {
 			$.post('submit.php', data).done(function(response){
+        $('#headline').text("Tak!");
 				$('#debug').html(response);
+        $('#outtro').show();
 			});
 		});
 		
