--- a/navigating.html
+++ b/navigating.html
@@ -25,7 +25,7 @@
 		<div class="col-md-6 col-md-offset-3">
       <button id="continue" onclick="onContinue()" style="display: none" class="btn btn-primary btn-lg btn-block">Fortsæt</button>
 			
-      <p>I denne opgave skal du føre din markør gennem tunnellen. Du starter i venstre siden og slutter i højre side. Hvis musen kommer udenfor tunnellen kan du blot fortsætte. Det gælder ikke om at udføre opgaven hurtigt, men snarere præcist. I denne opgave registrere vi din markørs bane og tiden det tager at udføre opgave.</p>
+      <p>I denne opgave skal du føre din markør gennem tunnelen. Du starter i venstre side og slutter i højre side. Hvis musen kommer uden for tunnelen kan du blot fortsætte. Det gælder ikke om at udføre opgaven hurtigt, men snarere præcist. I denne opgave registrerer vi din markørs bane og tiden det tager at udføre opgaven.</p>
 		</div>
 	</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
