--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<h1>Bachelorprojekt</h1>
 			<p>Vi laver en undersøgelse af Fitts' lov, en model af det menneskelige motoriske system udviklet af Paul Fitts i 1954. Fitts' lov er blevet anvendt af ergonomiingeniører til tusindvis af designs af alt fra samlebånd til computergrænseflader. Eftersom Fitts' lov er så indflydelsesrig, så er det vigtigt at kontrollere dens nøjagtighed, og overveje alternative modeller.</p>
 			<p>Vi har udviklet et webbaseret interaktivt eksperiment, der muliggør at alle på internettet kan deltage i vores forsøg, og gøre deres forsøgsdata tilgængelig for os. Hvis du kan undvære 3 minutter til at klikke på 29 målpunkter, vil vi meget gerne have dig til at deltage i vores forsøg.</p>
-			<button class="btn btn-primary btn-lg btn-block" onclick="onContinue()">Fortsæt</button>
+			<button id="continue" class="btn btn-primary btn-lg btn-block" onclick="onContinue()">Fortsæt</button>
 		</div>
 	</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -36,7 +36,8 @@
       }
       $(function() {
         if (isPhablet()) {
-          alert("You are on a phablet!");
+          $('#continue').prop('disabled', true);
+          $('#continue').html('Forsøget kan ikke udføres på mobil eller tablet');
         };
       });
     </script>
