--- a/results.html
+++ b/results.html
@@ -18,7 +18,7 @@
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3">
       <h2 id="headline">Vent venligst</h2>
-			<p id="debug">indsender data.. (dette kan tage op til flere minutter)</p>
+			<p id="debug">Indsender data.. (dette kan tage op til flere minutter)</p>
       <p id="outtro" style="display:none;">Vi takker dig for din deltagelse i vores bachelorprojekt. Den opsamlede data vil blive brugt til at analysere om markørens bevægelsesbane og acceleration kan tilpasses kendte variationer af Fitt's Lov. </p>
 		</div>
 	</div>
