--- a/spiral.html
+++ b/spiral.html
@@ -25,7 +25,7 @@
 		<div class="col-md-6 col-md-offset-3">
       <button id="continue" onclick="onContinue()" style="display: none" class="btn btn-primary btn-lg btn-block">Fortsæt</button>
 			
-      <p>I denne opgave skal du føre din markør gennem spirallen. Du starter i højre side ved at føre musen forbi den grønne streg og slutter i centrum. Forsøg at undgå kanterne, det gælder ikke om at udføre opgaven hurtigst men snarere præcist. Vi registrere din markørs bane og tiden det tager at udføre opgaven.</p>
+      <p>I denne opgave skal du føre din markør gennem spiralen. Du starter i højre side ved at føre musen forbi den grønne streg og slutter i centrum. Forsøg at undgå kanterne, det gælder ikke om at udføre opgaven hurtigst men snarere præcist. Vi registrere din markørs bane og tiden det tager at udføre opgaven.</p>
 		</div>
 	</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
