--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<h1>Bachelorprojekt</h1>
 			<p>Vi laver en undersøgelse af Fitts' lov, en model af det menneskelige motoriske system udviklet af Paul Fitts i 1954. Fitts' lov er blevet anvendt af ergonomiingeniører til tusindvis af designs af alt fra samlebånd til computergrænseflader. Eftersom Fitts' lov er så indflydelsesrig, så er det vigtigt at kontrollere dens nøjagtighed, og overveje alternative modeller.</p>
 			<p>Vi har udviklet et webbaseret interaktivt eksperiment, der muliggør at alle på internettet kan deltage i vores forsøg, og gøre deres forsøgsdata tilgængelig for os. Hvis du kan undvære 3 minutter til at klikke på 33 målpunkter, vil vi meget gerne have dig til at deltage i vores forsøg.</p>
-      <p>OBS: hvis du benytter dig af firefox-browseren kan der forekomme problemer med udførslen af testen - du anbefales at benytte en anden browsers, evt. Google Chrome</p>
+      <p>OBS: hvis du benytter dig af Firefox-browseren kan der forekomme problemer med udførslen af testen - du anbefales at benytte en anden browsers, evt. Google Chrome</p>
 			<button id="continue" class="btn btn-primary btn-lg btn-block" onclick="onContinue()">Fortsæt</button>
 		</div>
 	</div>
