--- a/pointing.html
+++ b/pointing.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bachelorprojekt</title>
+    <title>Bachelor Thesis</title>
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -22,9 +22,9 @@
 	</div>
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-      <button id="continue" onclick="onContinue()" style="display: none" class="btn btn-primary btn-lg btn-block">Fortsæt</button>
+      <button id="continue" onclick="onContinue()" style="display: none" class="btn btn-primary btn-lg btn-block">Continue</button>
       
-      <p>I denne opgave skal du trykke på de grønne cirkler med markøren. Du starter med at trykke på den grønne cirkel i midten, hvorefter en ny cirkel dukker op et tilfældigt sted på skærmen. Det er herefter din opgave at trykke på den nye cirkel, ved at føre markøren over på cirklen og trykke. Dette fortsættes indtil der ikke er flere cirkler tilbage. Det handler ikke om at udføre opgaven hurtigt, men snarere præcist. Vi registrere markørens bane til hver cirkel og hvor lang tid du tager om at trykke på hver enkelt cirkel.</p>
+      <p>In this task we ask you to click on the green circles with the cursor. You start the task by clicking the green circle in the center. A random circle will then appear and it is now your task to click on it. You are not supposed to complete the tasks fast, but rather with precision. We will register the cursors path to each circle and the time it took you to click on each circle.</p>
     </div>
   </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
