--- a/consent.html
+++ b/consent.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bachelorprojekt</title>
+    <title>Bachelor Thesis</title>
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -17,14 +17,14 @@
   <body>
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3">
-			<h1>Samtykkeerklæring</h1>
-			<p>Der er ingen forudsigelige risici i denne undersøgelse. De personlige oplysninger der skal indsamles i undersøgelsen, vil ikke knyttes til den enkelte deltagere i undersøgelsen.</p>
-			<p>Formålet med denne undersøgelse er at indsamle data om hvor hurtigt mennesker flytter markøren til mål i forskellige størrelser, og på forskellige afstande. Hvis du ønsker at deltage i vores forsøg, vil du blive bedt om at udfylde en kort webbaseret undersøgelse, og derefter klikke på en serie af 29 mål i to separate grupper (opgaver). Ud over de oplysninger du indtaster i undersøgelsen, vil vi indsamle data om den tid det tager dig at ramme hvert mål.</p>
-			<p>Alle de oplysninger som vi modtager fra dig under forsøget, vil blive behandlet fortroligt. Efter dette forsøg er afsluttet, kan vi gemme data til brug i fremtidig forskning af andre eller os selv. Samme garantier for fortrolighed givet her vil også gælde for fremtidig opbevaring og anvendelse af oplysningerne.</p>
-			<p>Deltagelse i dette forsøg er frivilligt. Du kan trække dig ud af forsøget ved at lukke browseren når som helst. Hvis du har spørgsmål om dine rettigheder eller behandling som deltager i dette forsøg, bedes du kontakte os på qgf142@alumni.ku.dk, bdj816@alumni.ku.dk eller hmd200@alumni.ku.dk</p>
-			<p>Hvis du ønsker at deltage i forsøget, skal du klikke på knappen "Accepter" nedenfor</p>
-			<button class="btn btn-primary btn-lg btn-block" onclick="onAccept()">Accepter</button>
-			<button class="btn btn-primary btn-lg btn-block" onclick="onReject()">Afvis</button>
+			<h1>Consent Form</h1>
+			<p>There are no foreseeable risks in this study. The personal informations to be collected in the study will not be linkable to individual participants in the study.</p>
+			<p>The objective of this study is to gather data about the speed with which humans move to targets of different sizes and at different distances. If you agree to take part in our research, you will be asked to fill out a short, web-based survey, and then click on a series of 33 targets in three separate groups (tasks). In addition to the information you enter in the survet, we will gather data about the time it takes you to select each target.</p>
+			<p>All of the information that we obtain from you during the research will be kept confidential. After this reseach is completed, we may save the data for use in future reseach by others or ourselves. However, the same confidentiality guarantees given here will apply to future storage and use of the materials.</p>
+			<p>Participation in this research is voluntary. You may withdraw from the research by closing the browser at any time. If you have any questions about your rights or treatment as a participant in this research project, please contact us at qgf142@alumni.ku.dk, bdj816@alumni.ku.dk or hmd200@alumni.ku.dk.</p>
+			<p>If you wish to take part in the research, please click the "Accept" button below.</p>
+			<button class="btn btn-primary btn-lg btn-block" onclick="onAccept()">Accept</button>
+			<button class="btn btn-primary btn-lg btn-block" onclick="onReject()">Do not accept</button>
 		</div>
 	</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
