--- a/navigating.html
+++ b/navigating.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bachelorprojekt</title>
+    <title>Bachelor Thesis</title>
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -18,14 +18,14 @@
 	<div class="row">
 		<div id="frame" style="width: 1024px;">
 			<canvas id="canvas"></canvas>
-			<button id="next" onclick="onNext()" style="display: none" class="btn btn-primary btn-lg">Næste</button>
+			<button id="next" onclick="onNext()" style="display: none" class="btn btn-primary btn-lg">Next</button>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3">
-      <button id="continue" onclick="onContinue()" style="display: none" class="btn btn-primary btn-lg btn-block">Fortsæt</button>
+      <button id="continue" onclick="onContinue()" style="display: none" class="btn btn-primary btn-lg btn-block">Continue</button>
 			
-      <p>I denne opgave skal du føre din markør gennem tunnelen. Du starter i venstre side og slutter i højre side. Hvis musen kommer uden for tunnelen kan du blot fortsætte. Det gælder ikke om at udføre opgaven hurtigt, men snarere præcist. I denne opgave registrerer vi din markørs bane og tiden det tager at udføre opgaven.</p>
+      <p>In this task we ask you to move your cursor through the tunnel on the screen. You start in the left side and finish in the right side. You are allowed to continue, if the mouse touch the sides of the tunnel or move outside the tunnel. You are not supposed to do the task fast, but rather with percision. We register your cursors path and the time you take on each task.</p>
 		</div>
 	</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
