--- a/survey.html
+++ b/survey.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bachelorprojekt</title>
+    <title>Bachelor Thesis</title>
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -17,75 +17,74 @@
   <body>
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3">
-			<p>Indtast venligst følgende information til at hjælpe os med at analysere svartider.</p>
-			<p>Alle personlige oplysninger vil blive behandlet fortroligt.</p>
+			<p>Please enter the following information to help us analyze response times. All personal data will be kept confidential.</p>
 			<form id="form">
 				<div class="form-group">
-					<label for="reference">Hvorfra hørte du om denne side?</label>
+					<label for="reference">How did you hear about this website?</label>
 					<input type="text" class="form-control" name="reference">
 				</div>
 				<div class="form-group">
-					<label for="age">Hvor gammel er du?</label>
+					<label for="age">How old are you?</label>
 					<input type="number" class="form-control" name="age">
 				</div>
 				<div class="form-group">
-					<label for="">Hvad er dit køn?</label><br/>
+					<label for="">What is your gender?</label><br/>
 					<label class="radio-inline">
-						<input type="radio" name="gender" value="male"> Mand
+						<input type="radio" name="gender" value="male"> Male
 					</label>
 					<label class="radio-inline">
-						<input type="radio" name="gender" value="female"> Kvinde
+						<input type="radio" name="gender" value="female"> Female
 					</label>
 					<label class="radio-inline">
-						<input type="radio" name="gender" value="other"> Andet
+						<input type="radio" name="gender" value="other"> Other
 					</label>
 					<label class="radio-inline">
-						<input type="radio" name="gender" value="na"> Vil ikke oplyse
+						<input type="radio" name="gender" value="na"> Do not tell
 					</label>
 				</div>
 				<div class="form-group">
-					<label for="videogames">Hvor mange timer om ugen bruger du på computerspil?</label>
+					<label for="videogames">Approximately how many hours do you spend on playing video games?</label>
 					<select name="videogames" class="form-control">
-						<option>under 1 time</option>
-						<option>1 - 5 timer</option>
-						<option>5 - 15 timer</option>
-						<option>15 - 40 timer</option>
-						<option>over 40 timer</option>
+						<option>below 1 hour</option>
+						<option>1 - 5 hours</option>
+						<option>5 - 15 hours</option>
+						<option>15 - 40 hours</option>
+						<option>over 40 hours</option>
 					</select>
 				</div>
 				<div class="form-group">
-					<label for="computers">Hvor mange timer om ugen bruger du på computere?</label>
+					<label for="computers">Approximately how many hours do you spend using computers?</label>
 					<select name="computers" class="form-control">
-						<option>under 1 time</option>
-						<option>1 - 5 timer</option>
-						<option>5 - 15 timer</option>
-						<option>15 - 40 timer</option>
-						<option>over 40 timer</option>
+						<option>below 1 hour</option>
+						<option>1 - 5 hours</option>
+						<option>5 - 15 hours</option>
+						<option>15 - 40 hours</option>
+						<option>above 40 hours</option>
 					</select>
 				</div>
 				<div class="form-group">
-					<label for="hand">Er du højre- eller venstrehåndet?</label><br/>
+					<label for="hand">are you right- or left-handed?</label><br/>
 					<label class="radio-inline">
-						<input type="radio" name="hand" value="right"> Højrehåndet
+						<input type="radio" name="hand" value="right"> Right-handed
 					</label>
 					<label class="radio-inline">
-						<input type="radio" name="hand" value="left"> Venstrehåndet
+						<input type="radio" name="hand" value="left"> Left-handed
 					</label>
 					<label class="radio-inline">
-						<input type="radio" name="hand" value="other"> Andet
+						<input type="radio" name="hand" value="other"> Other
 					</label>
 				</div>
 				<div class="form-group">
-					<label for="device">Hvilken pegeenhed benytter du?</label>
+					<label for="device">Which pointing device do you use?</label>
 					<select name="device" class="form-control">
-						<option>mus</option>
-						<option>touchpad</option>
-						<option>andet</option>
+						<option>Mouse</option>
+						<option>Touchpad</option>
+						<option>Other</option>
 					</select>
 				</div>
 			</form>
-			<p>Når du trykker på næste vil testen gå i gang. Der vil på næste side være en informationstekst om hvad du skal gøre.</p>
-			<button class="btn btn-primary btn-lg btn-block" onclick="onContinue()">Næste</button>
+			<p>The test will start on the next page. Each task will have a small text to inform you on what you are supposed to do.</p>
+			<button class="btn btn-primary btn-lg btn-block" onclick="onContinue()">Continue</button>
 		</div>
 	</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
