--- a/results.html
+++ b/results.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bachelorprojekt</title>
+    <title>Bachelor's Project</title>
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -17,9 +17,9 @@
   <body>
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3">
-      <h2 id="headline">Vent venligst</h2>
-			<p id="debug">Indsender data.. (dette kan tage op til flere minutter)</p>
-      <p id="outtro" style="display:none;">Vi takker dig for din deltagelse i vores bachelorprojekt. Den opsamlede data vil blive brugt til at analysere om markørens bevægelsesbane og acceleration kan tilpasses kendte variationer af Fitt's Lov. </p>
+      <h2 id="headline">Please wait..</h2>
+			<p id="debug">Sending data.. (this can take up to several minutes)</p>
+      <p id="outtro" style="display:none;">Thank you for your participation in our project. The data collected will be used to analyze if the cursors movement and acceleration can be fitted to known variations of Fitts' law</p>
 		</div>
 	</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
