--- a/navigating.html
+++ b/navigating.html
@@ -25,7 +25,7 @@
 		<div class="col-md-6 col-md-offset-3">
       <button id="continue" onclick="onContinue()" style="display: none" class="btn btn-primary btn-lg btn-block">Continue</button>
 			
-      <p>In this task we ask you to move your cursor through the tunnel on the screen. You start in the left side and finish in the right side. You are allowed to continue, if the mouse touch the sides of the tunnel or move outside the tunnel. You are not supposed to do the task fast, but rather with percision. We register your cursors path and the time you take on each task.</p>
+      <p>In this task we ask you to move your cursor through the tunnel on the screen. You start in the left side and finish in the right side. You are allowed to continue, if the mouse touch the sides of the tunnel or move outside the tunnel. You are not supposed to do the task fast, but rather with precision. We register the path of yout cursor and the time you spend on each task.</p>
 		</div>
 	</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
