--- a/survey.html
+++ b/survey.html
@@ -39,11 +39,11 @@
 						<input type="radio" name="gender" value="other"> Other
 					</label>
 					<label class="radio-inline">
-						<input type="radio" name="gender" value="na"> Do not tell
+						<input type="radio" name="gender" value="na"> No answer
 					</label>
 				</div>
 				<div class="form-group">
-					<label for="videogames">Approximately how many hours do you spend on playing video games?</label>
+					<label for="videogames">Approximately how many hours do you spend each week playing video games?</label>
 					<select name="videogames" class="form-control">
 						<option>below 1 hour</option>
 						<option>1 - 5 hours</option>
@@ -53,7 +53,7 @@
 					</select>
 				</div>
 				<div class="form-group">
-					<label for="computers">Approximately how many hours do you spend using computers?</label>
+					<label for="computers">Approximately how many hours do you spend each week using computers?</label>
 					<select name="computers" class="form-control">
 						<option>below 1 hour</option>
 						<option>1 - 5 hours</option>
@@ -63,7 +63,7 @@
 					</select>
 				</div>
 				<div class="form-group">
-					<label for="hand">are you right- or left-handed?</label><br/>
+					<label for="hand">Are you right- or left-handed?</label><br/>
 					<label class="radio-inline">
 						<input type="radio" name="hand" value="right"> Right-handed
 					</label>
@@ -77,13 +77,13 @@
 				<div class="form-group">
 					<label for="device">Which pointing device do you use?</label>
 					<select name="device" class="form-control">
-						<option>Mouse</option>
-						<option>Touchpad</option>
-						<option>Other</option>
+						<option>mouse</option>
+						<option>touchpad</option>
+						<option>other</option>
 					</select>
 				</div>
 			</form>
-			<p>The test will start on the next page. Each task will have a small text to inform you on what you are supposed to do.</p>
+			<p>The test will start on the next page. Each task will have a small text to inform you about what you are supposed to do.</p>
 			<button class="btn btn-primary btn-lg btn-block" onclick="onContinue()">Continue</button>
 		</div>
 	</div>
