--- a/spiral.html
+++ b/spiral.html
@@ -24,7 +24,8 @@
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3">
       <button id="continue" onclick="onContinue()" style="display: none" class="btn btn-primary btn-lg btn-block">Continue</button>
-      <p>in this task we ask you to move your cursor through the spiral. You start at the opening of the spiral and end at the center. you are allowed to continue if you touch the spirals sides. You are not supposed to do this task fast, but precise. We will register your cursors path and the time you spend on each task.</p>
+      
+      <p>In this task we ask you to move your cursor through the spiral. You start at the opening of the spiral and end at the center. you are allowed to continue if you touch the spirals sides. You are not supposed to do this task fast, but precise. We will register your cursors path and the time you spend on each task.</p>
 		</div>
 	</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
