--- a/results.html
+++ b/results.html
@@ -24,6 +24,7 @@
 	</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <script src="js/spin.min.js" type="text/javascript"></script>
     <script type="text/javascript">
 	    
 	    // Fetch the data stored in the local session, or redirect to index if none is found
@@ -31,7 +32,9 @@
 		else { var data = JSON.parse(sessionStorage.data) }
 		
 		$(function() {
-			$.post('submit.php', data).done(function(response){
+      var spinner = new Spinner().spin($('#headline'));
+			$.post('submit.php', data).done(function(response) {
+        spinner.stop();
         $('#headline').text("Tak!");
 				$('#debug').html(response);
         $('#outtro').show();
