--- a/results.html
+++ b/results.html
@@ -17,9 +17,10 @@
   <body>
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3">
-      <h2 id="headline">Please wait..</h2>
-			<p id="debug">Sending data.. (this can take up to several minutes)</p>
+			<p id="debug">Sending data.. (this can take up to several minutes)<br/>
+      Feel free to change browser tab while the data is uploading.</p>
       <p id="outtro" style="display:none;">Thank you for your participation in our project. The data collected will be used to analyze if the cursors movement and acceleration can be fitted to known variations of Fitts' law</p>
+      <p id="spin"></p>
 		</div>
 	</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -32,10 +33,27 @@
 		else { var data = JSON.parse(sessionStorage.data) }
 		
 		$(function() {
-      var spinner = new Spinner().spin($('#headline'));
+      var spinner_options = {
+        lines: 13,
+        length: 20,
+        width: 10,
+        radius: 30,
+        corners: 1,
+        rotate: 0,
+        direction: 1,
+        color: '#000',
+        speed: 1,
+        trail: 60,
+        shadow: false,
+        hwaccel: false,
+        className: 'spinner',
+        zIndex: 2e9,
+        top: '50%',
+        left: '50%'
+      };
+      var spinner = new Spinner(spinner_options).spin(document.body);
 			$.post('submit.php', data).done(function(response) {
         spinner.stop();
-        $('#headline').text("Tak!");
 				$('#debug').html(response);
         $('#outtro').show();
 			});
